--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ ul {
 }
 
 #container {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight:400;
   margin:0 auto;  /* 화면 중앙에 배치 */
   width:1200px;    /* 너비 */
 }
@@ -24,7 +26,7 @@ ul {
 header{
   width:100%;    /*  너비 */
   height:100px;   /* 높이 */ 
-  background-color: black;
+  background-color: lightcoral;
 }
 
 /* 로고 */
