--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ ul {
 header{
   width:100%;    /*  너비 */
   height:100px;   /* 높이 */ 
-  background-color: lightcoral;
+  background-color: black;
 }
 
 /* 로고 */
